# logunittest

./: .gitignore  .gitlab-ci.yml  .gitlab-ci.yml.save  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  Pipfile  Readme.md  logunittest.py  prcs.ps1  setup.cfg  tox.ini
logunittest/: __main__.py  arguments.py  contracts.py  filestates.py  general.py  get_creds.py  logger.py  logunittest.py  settings.py  sys_info.py
logunittest/actions/: info.py  logs.py  pipfile.py  stats.py  tox.py  ut.py
logunittest/pre_sync_hooks/: pipfile_modifications.py  pipfile_state.py
logunittest/resources/: logunittest.yml  terminal_displays.ps1
logunittest/src/: arguments.py  contracts.py  logunittest.py  settings.py
logunittest/src/actions/: info.py  initialize.py
logunittest/test/: test_general.py  test_logger.py  test_logs.py  test_logunittest.py  test_tox.py
logunittest/test/data/: Pipfile  available_apps.json  logunittest.yml  logunittest_2022-12-01-10-06-10-162984.txt  test_tox.ini
prcs/: jo.serve.lnk  jo.serve.sh  serve.pyw
