[metadata]
name = logunittest
include_package_data = True
version = 0.0.2
description = pipenv unittest logger
long_description = file: README.md, CHANGELOG.md, LICENSE
long_description_content_type = text/markdown
author = Lars Mielke
author_email = info@while-ai.org
url = https://gitlab.com/larsmielke2/logunittest

[options]
py_modules = logunittest
install_requires = 
    colorama
    pyyaml
    requests
    tabulate
packages = find:

[options.entry_points]
console_scripts =
    lut = logunittest.__main__:main
    logunittest = logunittest.__main__:main
